--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"gulp": "latest",
 		"gulp-autoprefixer": "latest",
 		"gulp-clean-css": "latest",
-		"gulp-fonter-fix": "latest",
+		"gulp-fonter-fix": "^0.0.1",
 		"gulp-group-css-media-queries": "latest",
 		"gulp-if": "latest",
 		"gulp-imagemin": "latest",
