--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"smooth-scroll": "latest",
 		"string-replace-loader": "latest",
 		"style-loader": "latest",
+		"stylelint-config-standard-scss": "^6.1.0",
 		"swiper": "latest",
 		"terser-webpack-plugin": "latest",
 		"tippy.js": "latest",
