--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,16 @@
 {
 	"cSpell.words": [
-		"ARMYTEK"
+		"ЗЗОСС",
+		"колличество",
+		"Попапы",
+		"рукоятиями",
+		"скроллом",
+		"табами",
+		"ARMYTEK",
+		"Hfix",
+		"lazyload",
+		"Oтправка",
+		"showmore",
+		"simplebar"
 	]
 }
