--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
 		"smooth-scroll": "latest",
 		"string-replace-loader": "latest",
 		"style-loader": "latest",
+		"stylelint": "^14.15.0",
+		"stylelint-config-prettier": "^9.0.4",
+		"stylelint-config-standard": "^29.0.0",
 		"stylelint-config-standard-scss": "^6.1.0",
 		"swiper": "latest",
 		"terser-webpack-plugin": "latest",
