--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["stylelint.vscode-stylelint"]
+  "recommendations": [
+	"stylelint.vscode-stylelint",
+	"oderwat.indent-rainbow"
+]
 }
