--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"gulp-webp-html-nosvg": "latest",
 		"gulp-webpcss": "latest",
 		"gulp-zip": "latest",
-		"html-webpack-plugin": "latest",
+		"html-webpack-plugin": "^5.5.0",
 		"inputmask": "latest",
 		"lightgallery": "latest",
 		"load-plugins": "latest",
