feat products-new

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"cSpell.words": [
+		"Длинноклинковое",
 		"ЗЗОСС",
 		"ЗЛАТМАКС",
 		"колличество",
@@ -13,6 +14,7 @@
 		"dotts",
 		"Hfix",
 		"lazyload",
+		"moretext",
 		"Oтправка",
 		"Pyton",
 		"showmore",
