--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
 		"колличество",
 		"Попапы",
 		"рукоятиями",
+		"селекта",
 		"скроллом",
 		"Среднеклинковое",
 		"табами",
@@ -15,6 +16,7 @@
 		"dotts",
 		"Hfix",
 		"lazyload",
+		"modif",
 		"moretext",
 		"Oтправка",
 		"Pyton",
