fix catalog styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,29 @@
 {
-	"cSpell.words": [
-		"Длинноклинковое",
-		"ЗЗОСС",
-		"ЗЛАТМАКС",
-		"колличество",
-		"Попапы",
-		"рукоятиями",
-		"селекта",
-		"скроллом",
-		"Среднеклинковое",
-		"табами",
-		"amet",
-		"ARMYTEK",
-		"controll",
-		"dotts",
-		"Hfix",
-		"lazyload",
-		"modif",
-		"moretext",
-		"Oтправка",
-		"Pyton",
-		"showmore",
-		"simplebar",
-		"zlatmax"
-	]
+   "cSpell.words": [
+      "Длинноклинковое",
+      "ЗЗОСС",
+      "ЗЛАТМАКС",
+      "колличество",
+      "Попапы",
+      "рукоятиями",
+      "селекта",
+      "скроллом",
+      "Среднеклинковое",
+      "табами",
+      "adipiscing",
+      "amet",
+      "ARMYTEK",
+      "consectetur",
+      "controll",
+      "dotts",
+      "Hfix",
+      "lazyload",
+      "modif",
+      "moretext",
+      "Oтправка",
+      "Pyton",
+      "showmore",
+      "simplebar",
+      "zlatmax"
+   ]
 }
