--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
       "ЗЗОСС",
       "ЗЛАТМАКС",
       "колличество",
+      "подпальцевый",
       "Попапы",
       "рукоятиями",
       "селекта",
